--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "watch": "webpack --watch  --mode development"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +15,7 @@
     "css-loader": "^6.5.1",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.1",
-    "sass-loader": "^12.4.0",
+    "sass-loader": "^12.6.0",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
